objects/AsiaTermsAndConditons__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>Sort No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TermsAndConditions__c</fullName>
        <label>Terms And Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Terms And Conditions Of Sale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>SortNo__c</columns>
        <columns>TermsAndConditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Terms And Conditions No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>